--- a/platforms/desktop/CMakeLists.txt
+++ b/platforms/desktop/CMakeLists.txt
@@ -2,7 +2,15 @@ cmake_minimum_required (VERSION 3.10)
 project(DesktopBuild)
 
 cmake_policy(SET CMP0077 NEW)
+cmake_policy(SET CMP0079 NEW)  # Allow linking to targets from other directories
 set(CMAKE_CXX_STANDARD 17)
+
+# Set UTF-8 encoding for MSVC to support Unicode
+if(MSVC)
+    add_compile_options(/utf-8)
+    # Enable math constants like M_PI
+    add_definitions(-D_USE_MATH_DEFINES)
+endif()
 
 add_definitions(-DPLATFORM_BUILD_DESKTOP)
 
@@ -17,6 +25,10 @@ add_subdirectory(dependencies/mooncake_log)
 # Smooth ui shit
 set(SMOOTH_UI_TOOLKIT_BUILD_EXAMPLE OFF)
 add_subdirectory(dependencies/smooth_ui_toolkit)
+# Apply MSVC-specific definitions to smooth_ui_toolkit
+if(MSVC)
+    target_compile_definitions(smooth_ui_toolkit PRIVATE _USE_MATH_DEFINES)
+endif()
 
 # App layer
 file(GLOB_RECURSE APP_LAYER_SRCS
@@ -28,15 +40,20 @@ set(APP_LAYER_INCS
     app/
 )
 
+# SDL - find before lvgl so we can link it to lvgl
+find_package(SDL2 CONFIG REQUIRED)
+# vcpkg provides SDL2 as CMake targets, not variables
+# SDL2::SDL2 or SDL2::SDL2-static will be available
+
 # Lvgl
 set(LV_CONF_INCLUDE_SIMPLE OFF)
 set(LV_CONF_PATH ../../lv_conf.h)
 add_subdirectory(dependencies/lvgl)
 
-# SDL
-find_package(SDL2 REQUIRED SDL2)
-include_directories(PUBLIC ${SDL2_INCLUDE_DIRS})
-target_include_directories(lvgl PUBLIC ${SDL2_INCLUDE_DIRS})
+# Link SDL2 to lvgl so SDL driver can find SDL2 headers
+target_link_libraries(lvgl PUBLIC 
+    $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
+)
 
 # App layer
 file(GLOB_RECURSE APP_LAYER_SRCS
@@ -44,6 +61,9 @@ file(GLOB_RECURSE APP_LAYER_SRCS
     app/*.cc
     app/*.cpp
 )
+# Ensure .c files are compiled as C, not C++
+file(GLOB_RECURSE APP_LAYER_C_SRCS app/*.c)
+set_source_files_properties(${APP_LAYER_C_SRCS} PROPERTIES LANGUAGE C)
 set(APP_LAYER_INCS
     app/
 )
@@ -62,10 +82,15 @@ target_link_libraries(app_desktop_build PUBLIC
     lvgl 
     lvgl_examples 
     lvgl_demos 
-    ${SDL2_LIBRARIES}
+    $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>
+    $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
     smooth_ui_toolkit
-    pthread
 )
+
+# Link pthread only on non-Windows platforms
+if(NOT WIN32)
+    target_link_libraries(app_desktop_build PUBLIC pthread)
+endif()
 
 # 设置构建路径
 set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build/desktop)
